finished js, added them all to one file instead of three, tweaked minor layout bugs

--- a/css/main.scss
+++ b/css/main.scss
@@ -250,7 +250,7 @@ footer {
     margin-top: 30px;
 }
 
-.banner {
+#banner {
     padding-left: 440px;
     padding-top: 10px;
 }
